Broadcast a message to connected users when someone connects or disconnects

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       socket.on('chat message', function(msg) {
         $('#messages').append($('<li>').text(msg));
       });
+      socket.on('a user connected', function() {
+        $('#messages').append($('<li>').text('User connected'));
+      });
+      socket.on('a user disconnected', function() {
+        $('#messages').append($('<li>').text('User disconnected'));
+      });
     });
     </script>
   </body>
